trunk/tests/kiama/negative/type_errors/L4/7_badrecord3.ob
MODULE badrecord3;

VAR
    rec2 : RECORD h : INTEGER; r : RECORD i : INTEGER; j : BOOLEAN END END;
    
BEGIN
    rec2.r := TRUE
END badrecord3.
